Feature login with keycloak

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "keycloak-js": "^21.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
@@ -22,6 +24,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  
+  },
+  "options": {
+    "sslCert": "./ssl/server.crt",
+    "sslKey": "./ssl/server.key",
+    "ssl":true
   },
   "eslintConfig": {
     "extends": [
