--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "keycloak-js": "^21.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-router-dom": "^6.8.2",
@@ -24,12 +26,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  
   },
   "options": {
     "sslCert": "./ssl/server.crt",
     "sslKey": "./ssl/server.key",
-    "ssl":true
+    "ssl": true
   },
   "eslintConfig": {
     "extends": [
