--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "keycloak-js": "^21.0.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -28,11 +29,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "options": {
-    "sslCert": "./ssl/server.crt",
-    "sslKey": "./ssl/server.key",
-    "ssl": true
   },
   "eslintConfig": {
     "extends": [
